feat: Adds scripts

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -10,7 +10,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     container:
-      image: alvarofpp/linter:base
+      image: alvarofpp/linter:latest
     steps:
       - uses: actions/checkout@v4
         with:
@@ -20,4 +20,4 @@ jobs:
       - run: lint-markdown
       - run: lint-dockerfile
       - run: lint-yaml
-      - run: lint-shell
+      - run: lint-shell-script
