--- a/.github/workflows/delivery.yml
+++ b/.github/workflows/delivery.yml
@@ -9,7 +9,7 @@ on:
       - 'image/**'
 
 env:
-  DOCKER_IMAGE: linter:latest
+  DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/linter:latest
 
 jobs:
   publish:
@@ -29,4 +29,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/$DOCKER_IMAGE
+          tags: $DOCKER_IMAGE
